# bitcask

./: CMakeLists.txt  LICENSE  README.md  bitcask-cli.cpp
docs/: CMakeLists.txt  Doxyfile.in
include/: bitcask_handle.hpp  keydir.hpp  store.hpp
src/: CMakeLists.txt  bitcask_handle.cpp  keydir.cpp  store.cpp
tests/: CMakeLists.txt  test_bitcask_handle.cpp  test_keydir.cpp  test_store.cpp
